@@ -61,6 +61,7 @@ pyqtgraph-0.9.9  [unreleased]
     - Fixed ImageItem exception building histogram when image has only one value
     - Fixed MeshData exception caused when vertexes have no matching faces
     - Fixed GLViewWidget exception handler
+    - Fixed unicode support in Dock
 
 
 pyqtgraph-0.9.8  2013-11-24
